// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  className="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    className="SelectField__label-wrapper"
  >
    <FormLabel
      htmlFor="optionSelect"
      isRequired={false}
      requiredText="required"
      testId="cf-ui-form-label"
    >
      Label
    </FormLabel>
  </div>
  <Select
    hasError={false}
    id="optionSelect"
    isDisabled={false}
    isRequired={false}
    name="optionSelect"
    onChange={[Function]}
    testId="cf-ui-select"
    width="full"
  >
    <Option
      testId="cf-ui-select-option"
      value="optionOne"
    >
      Option 1
    </Option>
  </Select>
</div>
`;

exports[`renders the component as disabled 1`] = `
<div
  className="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    className="SelectField__label-wrapper"
  >
    <FormLabel
      htmlFor="optionSelect"
      isRequired={false}
      requiredText="required"
      testId="cf-ui-form-label"
    >
      Label
    </FormLabel>
  </div>
  <Select
    hasError={false}
    id="optionSelect"
    isDisabled={true}
    isRequired={false}
    name="optionSelect"
    onChange={[Function]}
    testId="cf-ui-select"
    width="full"
  >
    <Option
      testId="cf-ui-select-option"
      value="optionOne"
    >
      Option 1
    </Option>
  </Select>
</div>
`;

exports[`renders the component as required 1`] = `
<div
  className="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    className="SelectField__label-wrapper"
  >
    <FormLabel
      htmlFor="optionSelect"
      isRequired={true}
      requiredText="required"
      testId="cf-ui-form-label"
    >
      Label
    </FormLabel>
  </div>
  <Select
    hasError={false}
    id="optionSelect"
    isDisabled={false}
    isRequired={true}
    name="optionSelect"
    onChange={[Function]}
    testId="cf-ui-select"
    width="full"
  >
    <Option
      testId="cf-ui-select-option"
      value="optionOne"
    >
      Option 1
    </Option>
  </Select>
</div>
`;

exports[`renders the component with a help text 1`] = `
<div
  className="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    className="SelectField__label-wrapper"
  >
    <FormLabel
      htmlFor="optionSelect"
      isRequired={false}
      requiredText="required"
      testId="cf-ui-form-label"
    >
      Label
    </FormLabel>
  </div>
  <Select
    hasError={false}
    id="optionSelect"
    isDisabled={false}
    isRequired={false}
    name="optionSelect"
    onChange={[Function]}
    testId="cf-ui-select"
    width="full"
  >
    <Option
      testId="cf-ui-select-option"
      value="optionOne"
    >
      Option 1
    </Option>
  </Select>
  <div
    className="SelectField__hints"
  >
    <HelpText
      className="SelectField__help-text"
      testId="cf-ui-help-text"
    >
      please select an option
    </HelpText>
  </div>
</div>
`;

exports[`renders the component with a validation message 1`] = `
<div
  className="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    className="SelectField__label-wrapper"
  >
    <FormLabel
      htmlFor="optionSelect"
      isRequired={false}
      requiredText="required"
      testId="cf-ui-form-label"
    >
      Label
    </FormLabel>
  </div>
  <Select
    hasError={true}
    id="optionSelect"
    isDisabled={false}
    isRequired={false}
    name="optionSelect"
    onChange={[Function]}
    testId="cf-ui-select"
    width="full"
  >
    <Option
      testId="cf-ui-select-option"
      value="optionOne"
    >
      Option 1
    </Option>
  </Select>
  <ValidationMessage
    className="SelectField__validation-message"
    testId="cf-ui-validation-message"
  >
    not valid
  </ValidationMessage>
</div>
`;

exports[`renders the component with a value 1`] = `
<div
  className="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    className="SelectField__label-wrapper"
  >
    <FormLabel
      htmlFor="optionSelect"
      isRequired={false}
      requiredText="required"
      testId="cf-ui-form-label"
    >
      Label
    </FormLabel>
  </div>
  <Select
    hasError={false}
    id="optionSelect"
    isDisabled={false}
    isRequired={false}
    name="optionSelect"
    onChange={[Function]}
    testId="cf-ui-select"
    value="optionOne"
    width="full"
  >
    <Option
      testId="cf-ui-select-option"
      value="optionOne"
    >
      Option 1
    </Option>
  </Select>
</div>
`;
